Changed the images

--- a/ballot-app/public/index.html
+++ b/ballot-app/public/index.html
@@ -32,16 +32,17 @@
     </div>
 
     <div id="proposalTemplate" style="display: none;">
-      <div class="col-sm-6 col-md-4 col-lg-3">
+      <div class="col-sm-8 col-md-2 col-lg-3">
         <div class="panel panel-default panel-proposal">
           <div class="panel-heading">
-            <h3 class="panel-title"></h3>
+            <h3 class="panel-title" style="text-align:center"></h3>
           </div>
           <div class="panel-body">
-            <img alt="140x140" data-src="holder.js/140x140" class="img-rounded img-center" style="width: 200px; height: 150px;" src="images/Milli.jpg" data-holder-rendered="true">
+            <img alt="140x140" data-src="holder.js/170x170" class="img-rounded img-center" style="width: 230px; height: 280px;" src="images/Milli.jpg" data-holder-rendered="true">
             <br/><br/>
-            <button class="btn btn-default btn-vote" type="button" data-id="0">Vote</button>
-
+            <div class="col-md-12 text-center"> 
+              <button class="btn btn-default btn-vote" type="button" data-id="0">Vote</button>
+            </div>  
           </div>
         </div>
       </div>
